# kdesdk-kio

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt
perldoc/: CMakeLists.txt  Messages.sh  README  perldoc.cpp  perldoc.h  pod2html.pl
po/ar/: kio6_perldoc.po
po/bs/: kio5_perldoc.po  kio6_perldoc.po
po/ca/: kio5_perldoc.po  kio6_perldoc.po
po/ca@valencia/: kio5_perldoc.po  kio6_perldoc.po
po/cs/: kio5_perldoc.po  kio6_perldoc.po
po/da/: kio5_perldoc.po  kio6_perldoc.po
po/de/: kio5_perldoc.po  kio6_perldoc.po
po/el/: kio5_perldoc.po  kio6_perldoc.po
po/en_GB/: kio5_perldoc.po  kio6_perldoc.po
po/eo/: kio5_perldoc.po  kio6_perldoc.po
po/es/: kio5_perldoc.po  kio6_perldoc.po
po/et/: kio5_perldoc.po  kio6_perldoc.po
po/eu/: kio5_perldoc.po  kio6_perldoc.po
po/fi/: kio5_perldoc.po  kio6_perldoc.po
po/fr/: kio5_perldoc.po  kio6_perldoc.po
po/ga/: kio5_perldoc.po  kio6_perldoc.po
po/gl/: kio5_perldoc.po  kio6_perldoc.po
po/he/: kio6_perldoc.po
po/hi/: kio5_perldoc.po  kio6_perldoc.po
po/hu/: kio5_perldoc.po  kio6_perldoc.po
po/ia/: kio6_perldoc.po
po/it/: kio5_perldoc.po  kio6_perldoc.po
po/ja/: kio5_perldoc.po  kio6_perldoc.po
po/ka/: kio5_perldoc.po  kio6_perldoc.po
po/kk/: kio5_perldoc.po  kio6_perldoc.po
po/ko/: kio5_perldoc.po  kio6_perldoc.po
po/lt/: kio5_perldoc.po  kio6_perldoc.po
po/lv/: kio6_perldoc.po
po/mr/: kio5_perldoc.po  kio6_perldoc.po
po/nb/: kio5_perldoc.po  kio6_perldoc.po
po/nds/: kio5_perldoc.po  kio6_perldoc.po
po/nl/: kio5_perldoc.po  kio6_perldoc.po
po/nn/: kio5_perldoc.po  kio6_perldoc.po
po/pa/: kio5_perldoc.po  kio6_perldoc.po
po/pl/: kio5_perldoc.po  kio6_perldoc.po
po/pt/: kio5_perldoc.po  kio6_perldoc.po
po/pt_BR/: kio5_perldoc.po  kio6_perldoc.po
po/ro/: kio6_perldoc.po
po/ru/: kio5_perldoc.po  kio6_perldoc.po
po/sa/: kio6_perldoc.po
po/sk/: kio5_perldoc.po  kio6_perldoc.po
po/sl/: kio5_perldoc.po  kio6_perldoc.po
po/sq/: kio5_perldoc.po  kio6_perldoc.po
po/sv/: kio5_perldoc.po  kio6_perldoc.po
po/ta/: kio6_perldoc.po
po/tr/: kio5_perldoc.po  kio6_perldoc.po
po/ug/: kio5_perldoc.po  kio6_perldoc.po
po/uk/: kio5_perldoc.po  kio6_perldoc.po
po/zh_CN/: kio5_perldoc.po  kio6_perldoc.po
po/zh_TW/: kio5_perldoc.po  kio6_perldoc.po
